netbox/netbox-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  namespace: netbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbox
  template:
    metadata:
      labels:
        app: netbox
    spec:
      containers:
        - name: netbox
          image: docker.io/netboxcommunity/netbox:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"    
            limits:
              memory: "500Mi"
              cpu: "250m"       
          volumeMounts:
            - name: netbox-media
              mountPath: /opt/netbox/netbox/media
            - name: netbox-reports
              mountPath: /opt/netbox/netbox/reports
            - name: netbox-scripts
              mountPath: /opt/netbox/netbox/scripts
      volumes:
        - name: netbox-media
          persistentVolumeClaim:
            claimName: netbox-media-files
        - name: netbox-reports
          persistentVolumeClaim:
            claimName: netbox-reports-files
        - name: netbox-scripts
          persistentVolumeClaim:
            claimName: netbox-scripts-files
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-worker
  namespace: netbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbox-worker
  template:
    metadata:
      labels:
        app: netbox-worker
    spec:
      containers:
        - name: netbox-worker
          image: docker.io/netboxcommunity/netbox:latest
          command:
            - /opt/netbox/venv/bin/python
            - /opt/netbox/netbox/manage.py
            - rqworker
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"    
            limits:
              memory: "500Mi"
              cpu: "250m"              
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-housekeeping
  namespace: netbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbox-housekeeping
  template:
    metadata:
      labels:
        app: netbox-housekeeping
    spec:
      containers:
        - name: netbox-housekeeping
          image: docker.io/netboxcommunity/netbox:latest
          command:
            - /opt/netbox/housekeeping.sh
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"    
            limits:
              memory: "500Mi"
              cpu: "250m"
