netbox/netbox-postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: netbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "500Mi" 
              cpu: "250m"     
            limits:
              memory: "1000Mi"
              cpu: "500m"  
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: netbox-postgres-data
