netbox/netbox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: netbox
  labels:
    app: bar100
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-stag"
spec:
  tls:
  - hosts:
    - netbox.danber.casa
    secretName: netbox-tls
  rules:
  - host: netbox.danber.casa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netbox
            port:
              number: 80
